2004-11-10  Tom Tromey  <tromey@redhat.com>

	* gij.cc (main): Treat -verbose the same as -verbose:class.
	(help): Document -verbose and -verbose:class.

	* link.cc (verbose_class_flag): Declare.
	(wait_for_state): Print message when handling precompiled class.
	* java/lang/natClass.cc (verbose_class_flag): Moved to link.cc.

2004-11-09  Tom Tromey  <tromey@redhat.com>

	* testsuite/libjava.lang/assign2.out: New file.
	* testsuite/libjava.lang/assign2.java: New file.

	* java/lang/natRuntime.cc (insertSystemProperties): Set
	java.version to 1.4.2 and java.specification.version to 1.4.  Set
	java.runtime.version.

2004-11-08  Tom Tromey  <tromey@redhat.com>

	* java/lang/natClass.cc (_Jv_IsAssignableFromSlow): Ensure
	supers installed.
	* link.cc (verify_type_assertions): Don't link supers.

	* include/jvm.h (_Jv_Linker::search_method_in_class): Declare.
	* include/java-interp.h (class _Jv_InterpClass)
	<_Jv_PrepareMissingMethods>: No longer `friend'.
	* java/lang/Class.h (_Jv_SearchMethodInClass): No longer
	`friend'.
	(_Jv_PrepareMissingMethods, _Jv_PrepareCompiledClass,
	_Jv_GetInterfaces, _Jv_GenerateITable, _Jv_FindIIndex,
	_Jv_AppendPartialITable, _Jv_LinkSymbolTable,
	_Jv_LayoutInterfaceMethods, _Jv_SetVTableEntries, _Jv_MakeVTable,
	_Jv_linkExceptionClassTable, _Jv_WaitForState): Likewise.
	* link.cc (search_method_in_class): Renamed from
	_Jv_SearchMethodInClass.
	(resolve_pool_entry): Updated.

	* include/jvm.h (_Jv_CheckAssignment): Removed.
	* java/lang/natClass.cc (_Jv_CheckAssignment): Removed.

2004-11-05  Tom Tromey  <tromey@redhat.com>

	* link.cc (verify_type_assertions): Ensure classes have supers
	linked.  Strip off array types first.

2004-11-05  Bryce McKinlay  <mckinlay@redhat.com>

	* link.cc: Include VerifyError.h. 
	(_Jv_Linker::verify_type_assertions): New. Read and evaluate entries
	in the type assertion table.
	* include/execution.h (_Jv_CompiledEngine::do_verify): Use
	verify_type_assertions.